# wok

./: Cargo.toml  README.md  manual.md
bin_examples/clappy_by_dust/: Cargo.toml
bin_examples/clappy_by_dust/src/: main.rs
bin_examples/clappy_by_lump/: Cargo.toml
bin_examples/clappy_by_lump/src/: main.rs
bin_examples/clappy_by_wok/: Cargo.toml
bin_examples/clappy_by_wok/src/: main.rs
crates/derime/src/: attr.rs  lib.rs
crates/serdeenv_toml/: Cargo.toml
crates/serdeenv_toml/src/: lib.rs
crates/serdenv_toml/: Cargo.toml
crates/serdenv_toml/src/: lib.rs
crates/valigate/: Cargo.toml
crates/valigate/src/: lib.rs
crates/valigate_derive/: Cargo.toml
crates/valigate_derive/src/: lib.rs
crates/wok_assets/: Cargo.toml
crates/wok_assets/src/: lib.rs
crates/wok_assets_derive/src/: lib.rs
crates/wok_axum/: Cargo.toml
crates/wok_axum/src/: crud.rs  handler.rs  layer.rs  lib.rs  response.rs
crates/wok_clap/: Cargo.toml
crates/wok_clap/src/: lib.rs  plugin.rs
crates/wok_core/: Cargo.toml
crates/wok_core/src/: commands.rs  lib.rs  param.rs  resources.rs  schedule.rs  system.rs  world.rs
crates/wok_core/src/system/: task.rs
crates/wok_core/src/system_fn/: blocking.rs  task.rs
crates/wok_core/src/world/: access.rs  gateway.rs
crates/wok_db/: Cargo.toml
crates/wok_db/src/: db.rs  lib.rs  surrealdb.rs
crates/wok_db/src/surrealdb/: as_surreal_bind.rs  crud.rs  from_surreal_bind.rs  record_serde.rs
crates/wok_db_derive/: Cargo.toml
crates/wok_db_derive/src/: as_surreal_bind.rs  from_surreal_bind.rs  lib.rs
crates/wok_derive/: Cargo.toml
crates/wok_derive/src/: param_derive.rs
crates/wok_params_client/: Cargo.toml
crates/wok_trigger/: Cargo.toml
examples/: chain1.rs  events.rs  first.rs
examplesbin/axum_person_crud/: Cargo.toml  config.toml  sample.env
examplesbin/axum_person_crud/src/: main.rs
examplesbin/clappy_by_wok/: Cargo.toml
libs/derime/: Cargo.toml
libs/derime/src/: attr.rs  lib.rs
libs/dust_clap/: Cargo.toml
libs/dust_clap/src/: lib.rs
libs/dust_db/: Cargo.toml
libs/dust_db/src/: db.rs  lib.rs  surrealdb.rs
libs/lump_assets/: Cargo.toml
libs/lump_assets/src/: lib.rs
libs/lump_axum/: Cargo.toml
libs/lump_axum/src/: lib.rs
libs/lump_clap/: Cargo.toml
libs/lump_clap/src/: db.rs  lib.rs  plugin.rs  router.rs  schedule.rs
libs/lump_core/: Cargo.toml
libs/lump_core/src/: any_handle.rs  commands.rs  lib.rs  local_any_handle.rs  param.rs  resources.rs  runtime.rs  schedule.rs  system.rs  system_fn.rs  system_locking.rs  world.rs
libs/lump_core/src/system/: combinators.rs  input.rs  task.rs
libs/lump_core/src/system_fn/: blocking.rs  task.rs
libs/lump_core/src/world/: access.rs  gateway.rs
libs/lump_db/: Cargo.toml
libs/lump_db/src/: db.rs  lib.rs  surrealdb.rs
libs/lump_db/src/surrealdb/: as_surreal_bind.rs  crud.rs  from_surreal_bind.rs
libs/lump_db_derive/: Cargo.toml
libs/lump_db_derive/src/: as_surreal_bind.rs  from_surreal_bind.rs  lib.rs
libs/lump_derive/: Cargo.toml
libs/lump_derive/src/: lib.rs
libs/lump_params_client/: Cargo.toml
libs/lump_params_client/src/: lib.rs
libs/lump_trigger/: Cargo.toml
libs/lump_trigger/src/: lib.rs
libs/valigate/: Cargo.toml
libs/valigate/src/: lib.rs
libs/valigate_derive/src/: lib.rs
libs/wok_assets/: Cargo.toml
libs/wok_assets/src/: lib.rs
libs/wok_assets_derive/: Cargo.toml
libs/wok_assets_derive/src/: lib.rs
libs/wok_axum/: Cargo.toml
libs/wok_axum/src/: crud.rs  extract.rs  layer.rs  lib.rs
libs/wok_clap/src/: db.rs  plugin.rs  router.rs  schedule.rs
libs/wok_core/src/: async_executor.rs  commands.rs  lib.rs  param.rs  resources.rs  runtime.rs  schedule.rs  system.rs  system_fn.rs  world.rs
libs/wok_core/src/system/: combinators.rs  task.rs
libs/wok_core/src/system_fn/: blocking.rs  task.rs
libs/wok_core/src/world/: access.rs  gateway.rs  meta.rs
libs/wok_db/: Cargo.toml
libs/wok_db/src/: db.rs  lib.rs  surrealdb.rs
libs/wok_db/src/surrealdb/: crud.rs
libs/wok_db_derive/: Cargo.toml
libs/wok_db_derive/src/: from_surreal_bind.rs  lib.rs
libs/wok_derive/: Cargo.toml
libs/wok_derive/src/: derime.rs  lib.rs  param_derive.rs
libs/wok_params_client/src/: lib.rs
libs/wok_trigger/src/: lib.rs
src/: any_handle.rs  app.rs  assets.rs  async_executor.rs  async_runtime.rs  commands.rs  dust.rs  events.rs  foreign.rs  lib.rs  locks_runtime.rs  param.rs  plugin.rs  remote_gateway.rs  resources.rs  run.rs  runtime.rs  startup.rs  system.rs  system_fn.rs  world.rs
src/app/: app_runner.rs
src/foreign/: params_client.rs
src/locks_runtime/: system_lock_runtime.rs
src/runtime/: system_lock_runtime.rs
