[package]
name = "lump"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ 
	"bin_examples/clappy_by_lump", "libs/lump_assets", 
	"libs/lump_clap", 
	"libs/lump_core",
	"libs/lump_db",
	"libs/lump_db_derive",
	"libs/lump_derive",
	"libs/lump_params_client",
	"libs/lump_trigger",
	"libs/lump_assets"
, "libs/lump_axum"]

[workspace.dependencies]
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
serde = { version = "1.0" }
toml = { version = "0.8" }
tokio = { version = ">=1.2", default-features = false, features = ["rt"] }
async-channel = "2.5.0"
take_mut = "0.2.2"

[dependencies]
lump_core = { path = "libs/lump_core" }
futures = { workspace = true }
tokio = { workspace = true, optional = true }
async-channel = { workspace = true }

[features]
tokio = ["dep:tokio"]
