[package]
name = "wok"
version = "0.1.0"
edition = "2024"
description = "A framework for building async composable applications"
repository = "https://github.com/ocxide/wok"
readme = "README.md"
keywords = ["wok", "async", "framework"]

[workspace]
members = [ 
	"bin_examples/clappy_by_wok", "libs/wok_assets", 
	"libs/wok_clap", 
	"libs/wok_core",
	"libs/wok_db",
	"libs/wok_db_derive",
	"libs/wok_derive",
	"libs/wok_params_client",
	"libs/wok_trigger",
	"libs/wok_assets"
, "libs/wok_axum", "libs/wok_assets_derive", "libs/derime"]

[workspace.dependencies]
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
serde = { version = "1.0" }
toml = { version = "0.8" }
tokio = { version = ">=1.2", default-features = false, features = ["rt"] }
async-channel = "2.5.0"
take_mut = "0.2.2"
tracing = "0.1.41"
# derive only
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"

[dependencies]
wok_core = { path = "libs/wok_core" }
futures = { workspace = true }
tokio = { workspace = true, optional = true }
async-channel = { workspace = true }

[features]
tokio = ["dep:tokio"]
