[package]
name = "wok"
version = "0.1.0"
edition = "2024"
description = "A framework for building async composable applications"
repository = "https://github.com/ocxide/wok"
readme = "README.md"
keywords = ["wok", "async", "framework"]

[workspace]
members = [ 
	"examplesbin/*",
	"crates/*", 
]

[workspace.dependencies]
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
serde = { version = "1.0" }
toml = { version = "0.8" }
tokio = { version = ">=1.2", default-features = false, features = ["rt"] }
async-channel = "2.5.0"
take_mut = "0.2.2"
tracing = "0.1.41"
# derive only
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["extra-traits"] }
chrono = { version = "^0.4", default-features = false }

[dependencies]
wok_core = { path = "crates/wok_core" }
futures = { workspace = true }
tokio = { workspace = true, optional = true }
async-channel = { workspace = true }

[features]
tokio = ["dep:tokio"]
