[package]
name = "clappy_by_dust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
surrealdb = "2.3.3"
dust = { path = "../../" }
dust_clap = { path = "../../libs/dust_clap" }
dust_db = { path = "../../libs/dust_db" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
idn = { git = "https://github.com/ocxide/idn" }
