[package]
name = "clappy_by_lump"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
surrealdb = "2.3.3"
lump = { path = "../../" }
lump_clap = { path = "../../libs/lump_clap" }
lump_db = { path = "../../libs/lump_db" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
idn = { git = "https://github.com/ocxide/idn" }
lump_params_client = { path = "../../libs/lump_params_client" }
