[package]
name = "wok_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
wok = { path = "../../" }
wok_core = { path = "../wok_core" }
axum = "0.8.0"
tokio = { workspace = true }
take_mut = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tower-layer = "0.3.3"
tower-service = "0.3.3"
wok_db = { path = "../wok_db" }
tracing = { workspace = true }
valigate = { path = "../valigate" }
