[package]
name = "wok_db"
version = "0.1.0"
edition = "2024"

[features]
default = ["surrealdb", "chrono"]
surrealdb = ["dep:surrealdb", "dep:serde", "dep:wok_db_derive"]
chrono = ["dep:chrono"]

[dependencies]
serde = { version= "1.0.219", features = ["derive"], optional = true }
surrealdb = { version = "^2.0.0", optional = true }
take_mut = "0.2.2"
wok = { path = "../../" }
wok_db_derive = { path = "../wok_db_derive", optional = true }
chrono = { workspace = true, optional = true }
tracing = { workspace = true }
valigate = { path = "../valigate" }
