[package]
name = "clappy_by_wok"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
surrealdb = "2.3.3"
wok = { path = "../../" }
wok_clap = { path = "../../crates/wok_clap" }
wok_db = { path = "../../crates/wok_db" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
idn = { git = "https://github.com/ocxide/idn" }
wok_params_client = { path = "../../crates/wok_params_client" }
