[package]
name = "lump_clap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
lump = { path = "../../" }
lump_db = { path = "../lump_db", optional = true }
lump_core = { path = "../lump_core" }
futures = { workspace = true }
take_mut = "0.2.2"

[features]
db = ["dep:lump_db"]
