[package]
name = "lump_db"
version = "0.1.0"
edition = "2024"

[features]
default = ["surrealdb", "chrono"]
surrealdb = ["dep:surrealdb", "dep:serde", "dep:lump_db_derive"]
chrono = ["dep:chrono"]

[dependencies]
serde = { version= "1.0.219", features = ["derive"], optional = true }
surrealdb = { version = "^2.0.0", optional = true }
take_mut = "0.2.2"
lump = { path = "../../" }
lump_db_derive = { path = "../lump_db_derive", optional = true }
chrono = { version = "^0.4", default-features = false, optional = true }
