[package]
name = "wok_assets"
version = "0.1.0"
edition = "2024"

[dependencies]
wok = { path = "../../" }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, optional = true }
wok_assets_derive = { path = "../wok_assets_derive" }
valigate = { path = "../valigate" }

[features]
tokio = ["dep:tokio"]
